# CFPlayer

./: .gitignore
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/cfans/ffmpeg/player/: CFPlayer.java  CFPlayerActivity.java  MainActivity.java  SilentPlayer.java
app/src/main/jni/: SDK_JNI.c
app/src/main/jni/player/: FFContext.h  FFPlayer.c  FFPlayerContext.h
app/src/main/jni/view/: GLRGBView.c  GLSuperRGBView.c  GLSuperYUVView.c  GLUtil.c  GLUtil.h  GLViewContext.h  GLYUVView.c
app/src/main/res/layout/: activity_main.xml  activity_vplayer.xml  videocontroller.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
